# opm_flow_windows

./: .gitattributes  .gitignore  BUILD_WINDOWS.md  OPM_Windows_Build_Report.html  PACKAGING.md  PATCHES.md  README.md  VALIDATION.md  allow-firewall.ps1  build-all.ps1  build-module.ps1  build-optests.ps1  package-flow.ps1  setup-env.ps1  update-opm-masters.ps1
ci/: windows.yml
compat/include/: FCMacros.h  getopt.h  unistd.h
compat/include/sys/: ioctl.h  utsname.h
flow-gui/: CMakeLists.txt  DeckEditor.cpp  DeckEditor.h  FlowGuiWindow.cpp  FlowGuiWindow.h  README.md  SummaryPlotWidget.cpp  SummaryPlotWidget.h  Viewer3D.cpp  Viewer3D.h  main.cpp
flow-gui-qt/: CMakeLists.txt  FlowGuiWindow.cpp  FlowGuiWindow.h  README.md  SummaryPlotWidget.cpp  SummaryPlotWidget.h  Viewer3D.cpp  Viewer3D.h  main.cpp
installer/: opm-flow.iss
packaging/: build-msix.ps1
patches/: dune-common-windows.patch  dune-grid-windows.patch
release-notes/: v2026.10-pre.md
